[TASK]    Index content elements inside a container element referenced via a shortcut. https://github.com/tpwd/ke_search/issues/246
[TASK]    Report error if no directories have been configured for file indexing. https://github.com/tpwd/ke_search/issues/281
[TASK]    Show status of cleanup process in indexer status (backend module and CLI)
[DOCS]    Add note about additional fields type (must be string). https://github.com/tpwd/ke_search/issues/248

Version 6.3.0, 24 January 2025
[FEATURE] Add support for site sets. https://github.com/tpwd/ke_search/issues/278
[BUGFIX]  Avoid PHP warning when saving category. Thanks to Simon Praetorius. https://github.com/tpwd/ke_search/issues/276
[DOCS]    Add documentation about indexing content elements made with EXT:content_blocks. https://github.com/tpwd/ke_search/issues/254

Version 6.2.0, 17 January 2025
[FEATURE] Make it possible to add JOIN query part via "getQueryParts" hook. Thanks to André Müller
[BUGFIX]  Account for files without file extension. Thanks to Simon Praetorius. https://github.com/tpwd/ke_search/pull/268
[BUGFIX]  Retain filter order from configuration. Thanks to Simon Praetorius. https://github.com/tpwd/ke_search/pull/272
[TASK]    Switch to PHP based rendering for documentation. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/265
[TASK]    Migrate outdated TCA configurations in FlexForms. https://github.com/tpwd/ke_search/issues/264
[TASK]    Migrate usage of $GLOBALS['TSFE']->tmpl for TYPO3 13. https://github.com/tpwd/ke_search/issues/258

Version 6.1.3, 20 December 2024
[FEATURE] Show additional fields which are registered by other extensions in "Indexed content" function of the backend module
[BUGFIX]  Make it possible to have multiple "orderBy" parts in the search result query in TYPO3 13
[TASK]    Add special treatment for the ke_search_premium "Custom Ranking" feature in the search result query "orderBy" part
[TASK]    Make it possible to add "having" in the search result query