@@ -20,7 +20,9 @@ $txKesearchFiltersTCA = [
         'security' => [
             'ignorePageTypeRestriction' => true,
         ],
-        'iconfile' => 'EXT:ke_search/Resources/Public/Icons/table_icons/icon_tx_kesearch_filters.gif',
+        'typeicon_classes' => [
+            'default' => 'content-elements-searchform',
+        ],
         'searchFields' => 'title',
     ],
     'columns' => [
