@@ -9,6 +9,7 @@ Upcoming version
 [TASK]    Index content elements inside a container element referenced via a shortcut. https://github.com/tpwd/ke_search/issues/246
 [TASK]    Report error if no directories have been configured for file indexing. https://github.com/tpwd/ke_search/issues/281
 [TASK]    Show status of cleanup process in indexer status (backend module and CLI)
+[TASK]    Update backend icons, https://github.com/tpwd/ke_search/issues/108
 [DOCS]    Add note about additional fields type (must be string). https://github.com/tpwd/ke_search/issues/248
 
 Version 6.3.0, 24 January 2025
